--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ header .navbar a {
     min-height: 100vh;
 
     background-size: cover;
-    background-position: left;
+    background-position: center;
     transition: background-image 0.5s ease-in-out;
     opacity: 0;
 }
@@ -250,8 +250,7 @@ header .navbar a {
 
 .home .bgcover {
     left: 0;
-    right: 0;
-    bottom: 0;
+
     background: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, transparent 15%);
     display: flex;
     position: absolute;
@@ -515,6 +514,7 @@ footer p{
     .home {
         justify-content: center;
         background-position: center;
+        background-size: contain;
     }
     .home .content {
         text-align: center;
